<resources>
    <string name="app_name">Akipa</string>
    <string name="texto_placeholder">Texto de prueba</string>
    <string name="cd_plato_imagen">Imagen del Plato</string>
    <string name="texto_cantidad">Cantidad</string>
    <string name="texto_agregar_al_carrito">Agregar al Carrito</string>
    <string name="texto_agregar_al_carrito2">Ir A Pagar</string>
    <string name="cd_boton_para_reducir_cantidad_de_platos">Boton para reducir cantidad de platos</string>
    <string name="cd_boton_para_incrementar_la_cantidad_de_platos">Boton para incrementar la cantidad de platos</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="cd_logo_akipa">Logo de Akipa</string>
    <string name="inicio_sesion_menu">Inicio Sesión</string>
    <string name="carrito">Carrito</string>
    <string name="nombre_plato">Plato</string>
    <string name="precio_plato">Precio</string>
    <string name="descripcion_plato">Descripcion</string>
    <string name="agregar_plato">Agregar Plato</string>
    <string name="cd_imagen_para_nuevo_plato">Imagen para nuevo plato</string>
    <string name="menu_agregar_plato">Agregar Plato</string>
    <string name="profile">Perfil</string>
    <string name="mis_pedidos">Mis pedidos</string>
    <string name="perfil_menu">Perfil</string>
    <string name="gestion_de_platos">Gestion de Platos</string>
    <string name="gestion_de_pedidos">Gestion de Pedidos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="cd_boton_editar_plato">Boton para editar plato</string>
    <string name="cd_boton_eliminar_plato">Boton para eliminar plato</string>
    <string name="editar_plato">Actualizar Plato</string>
    <string name="subtotal">Subtotal</string>
    <string name="tab_titulo_recojo_en_tienda">Recojo en Tienda</string>
    <string name="tab_titulo_delivery">Delivery</string>
    <string name="hora_helper_text">Indique la hora en que estará acercándose al local</string>
    <string name="fecha_helper_text">Indique la fecha en que estará acercándose al local</string>
    <string name="local_helper_text">Indice el local al que se acercará</string>
    <string name="realizar_pedido">Realizar Pedido</string>
    <string name="direccion_helper_text">Indique la dirección a la que se debe llevar su pedido</string>
    <string name="hint_direccion">Dirección</string>
    <string name="referencia_helper_text">Puede indicar una referencia (opcional)</string>
    <string name="hint_referencia">Referencia</string>



    <string-array name="akipa_locales">
        <item>Salaverry</item>
        <item>Chacarilla</item>
    </string-array>
</resources>