<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/plato_imagen"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:contentDescription="@string/cd_imagen_para_nuevo_plato"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_agregar_plato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Nombre del Plato -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nombre_plato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/plato_imagen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre_plato_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_plato"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Precio del Plato -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_precio_plato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_nombre_plato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/precio_plato_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio_plato"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Descripcion del Plato -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_descripcion_plato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_precio_plato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descripcion_plato_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/descripcion_plato"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/agregar_plato_boton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/agregar_plato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_descripcion_plato" />

</androidx.constraintlayout.widget.ConstraintLayout>