<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/seleccionar_hora_texto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/hora_helper_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/start_timer_trigger"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_clock"
            app:layout_constraintStart_toStartOf="@id/seleccionar_hora_texto"
            app:layout_constraintTop_toBottomOf="@id/seleccionar_hora_texto" />

        <TextView
            android:id="@+id/seleccionar_hora_valor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/start_timer_trigger"
            app:layout_constraintEnd_toEndOf="@id/seleccionar_hora_texto"
            app:layout_constraintStart_toEndOf="@id/start_timer_trigger"
            app:layout_constraintTop_toTopOf="@id/start_timer_trigger"
            tools:text="03:45pm" />

        <TextView
            android:id="@+id/seleccionar_fecha_texto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/fecha_helper_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/seleccionar_hora_texto"
            app:layout_constraintStart_toStartOf="@id/seleccionar_hora_texto"
            app:layout_constraintTop_toBottomOf="@id/start_timer_trigger" />

        <ImageView
            android:id="@+id/start_date_trigger"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_calendar"
            app:layout_constraintStart_toStartOf="@id/seleccionar_hora_texto"
            app:layout_constraintTop_toBottomOf="@id/seleccionar_fecha_texto" />

        <TextView
            android:id="@+id/seleccionar_fecha_valor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/start_date_trigger"
            app:layout_constraintEnd_toEndOf="@id/seleccionar_hora_texto"
            app:layout_constraintStart_toEndOf="@id/start_date_trigger"
            app:layout_constraintTop_toTopOf="@id/start_date_trigger"
            tools:text="15.02.21" />

        <TextView
            android:id="@+id/local_texto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/local_helper_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/seleccionar_hora_texto"
            app:layout_constraintTop_toBottomOf="@id/start_date_trigger" />

        <Spinner
            android:id="@+id/local_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/seleccionar_hora_texto"
            app:layout_constraintStart_toStartOf="@id/seleccionar_hora_texto"
            app:layout_constraintTop_toBottomOf="@id/local_texto" />

        <Button
            android:id="@+id/realizar_pedido_boton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/realizar_pedido"
            app:layout_constraintEnd_toEndOf="@id/seleccionar_hora_texto"
            app:layout_constraintStart_toStartOf="@id/seleccionar_hora_texto"
            app:layout_constraintTop_toBottomOf="@id/local_spinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>