<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="plato"
            type="com.akipa.entidades.Plato" />

        <variable
            name="viewmodel"
            type="com.akipa.ui.detalle_plato.DetallePlatoViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/plato_imagen"
                url_imagen="@{plato.urlImagen}"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/cd_producto_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_easyprom_logo_placeholder" />

            <TextView
                android:id="@+id/plato_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{plato.nombre}"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/plato_imagen"
                app:layout_constraintStart_toStartOf="@+id/plato_imagen"
                app:layout_constraintTop_toBottomOf="@+id/plato_imagen"
                tools:text="@string/texto_placeholder" />

            <TextView
                android:id="@+id/plato_precio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{plato.precioFormateado}"
                android:textAlignment="center"
                android:textColor="@color/marca_secundario"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/plato_nombre"
                app:layout_constraintStart_toStartOf="@+id/plato_nombre"
                app:layout_constraintTop_toBottomOf="@id/plato_nombre"
                tools:text="S/20.50" />

            <TextView
                android:id="@+id/plato_descripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{plato.descripcion}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/plato_precio"
                app:layout_constraintStart_toStartOf="@+id/plato_precio"
                app:layout_constraintTop_toBottomOf="@id/plato_precio"
                tools:text="Descripción del plato en caso la tuviese. Que tan larga será ? ni idea la verdad. Supongo que lo veremos luego" />

            <TextView
                android:id="@+id/cantidad_texto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/texto_cantidad"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/plato_descripcion"
                app:layout_constraintTop_toBottomOf="@id/plato_descripcion" />

            <TextView
                android:id="@+id/plato_cantidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewmodel.cantidadPlatos}"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/reducir_cantidad_boton"
                app:layout_constraintEnd_toStartOf="@id/incrementar_cantidad_boton"
                app:layout_constraintStart_toStartOf="@id/cantidad_texto"
                app:layout_constraintTop_toTopOf="@id/incrementar_cantidad_boton"
                tools:text="1" />

            <ImageButton
                android:id="@+id/incrementar_cantidad_boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/cd_boton_para_incrementar_la_cantidad_de_platos"
                android:onClick="@{() -> viewmodel.incrementarCantidadPlato()}"
                android:src="@drawable/ic_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cantidad_texto" />

            <ImageButton
                android:id="@+id/reducir_cantidad_boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cd_boton_para_reducir_cantidad_de_platos"
                android:onClick="@{() -> viewmodel.reducirCantidadPlato()}"
                android:src="@drawable/ic_remove"
                app:layout_constraintEnd_toEndOf="@id/incrementar_cantidad_boton"
                app:layout_constraintTop_toBottomOf="@+id/incrementar_cantidad_boton" />

            <Button
                android:id="@+id/agregar_al_carrito_boton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.agregarPlatoAlCarrito(plato)}"
                android:text="@string/texto_agregar_al_carrito"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/incrementar_cantidad_boton"
                app:layout_constraintStart_toStartOf="@id/plato_cantidad"
                app:layout_constraintTop_toBottomOf="@id/reducir_cantidad_boton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>