<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="platoEnCarrito"
            type="com.akipa.database.plato_en_carrito.PlatoEnCarrito" />

        <variable
            name="clickListener"
            type="com.akipa.ui.carrito.OnClickItemsCarrito" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/plato_imagen"
                url_imagen="@{platoEnCarrito.urlImagen}"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:contentDescription="@string/cd_plato_imagen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_broken_image" />

            <TextView
                android:id="@+id/plato_titulo_texto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@{platoEnCarrito.nombre}"
                android:textColor="@color/marca_oscuro"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/plato_imagen"
                app:layout_constraintTop_toTopOf="@id/plato_imagen"
                tools:text="Ceviche" />

            <TextView
                android:id="@+id/precio_titulo_texto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{platoEnCarrito.precioFormateado}"
                android:textColor="@color/marca_secundario"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/plato_titulo_texto"
                app:layout_constraintTop_toBottomOf="@id/plato_titulo_texto"
                tools:text="S/29.99" />

            <TextView
                android:id="@+id/cantidad_titulo_texto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{platoEnCarrito.cantidadUI}"
                android:textAlignment="center"
                android:textColor="@color/marca_oscuro"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/image_delete"
                app:layout_constraintEnd_toStartOf="@id/incrementar_cantidad_boton"
                app:layout_constraintStart_toEndOf="@id/reducir_cantidad_boton"
                app:layout_constraintTop_toTopOf="@id/image_delete"
                tools:text="10" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <ImageButton
                android:id="@+id/incrementar_cantidad_boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_boton_para_incrementar_la_cantidad_de_platos"
                android:onClick="@{() -> clickListener.onAgregarClick(platoEnCarrito)}"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="@id/reducir_cantidad_boton"
                app:layout_constraintEnd_toStartOf="@id/image_delete"
                app:layout_constraintStart_toEndOf="@id/reducir_cantidad_boton" />

            <ImageButton
                android:id="@+id/reducir_cantidad_boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_boton_para_reducir_cantidad_de_platos"
                android:onClick="@{() -> clickListener.onReducirClick(platoEnCarrito)}"
                android:src="@drawable/ic_remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/incrementar_cantidad_boton"
                app:layout_constraintStart_toStartOf="@id/vertical_guideline" />

            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_boton_eliminar_plato"
                android:onClick="@{() -> clickListener.onEliminarClick(platoEnCarrito)}"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="@id/plato_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/plato_imagen" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>